# powertf

./: .gitignore  LICENSE  README.md  dataloader.py  pyproject.toml
federated/: README.md  comm.py  simulate.py
federated/core/: __init__.py  client.py  grid.py  server.py  utils.py
numerical/: README.md  adversarial.py  brentexp.py  histogram.py  loglinear.py  onepassnll.py  overflow.py  pwisenaive.py  skew.py  stablenll.py  time.py  transfunc.py
numerical/optimize/: __init__.py  expsearch.py  logcomp.py  utils.py
train/: README.md  deviate.py  effect.py
