[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "powertf"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "numpy==2.3.2",
    "scipy==1.16.1",
    "scikit-learn==1.7.1",
    "xgboost==3.0.5",
    "pandas==2.3.2",
    "xlrd==2.0.2",
    "matplotlib==3.10.6",
    "mpmath==1.3.0",
    "mpsci @ git+https://github.com/WarrenWeckesser/mpsci@9b81d51031651d55a9acf29eb080add12840978d"
]

[tool.hatch.build]
include = [
    "federated/**/*",
    "numerical/**/*",
    "train/**/*",
    "dataloader.py"
]
exclude = [
    "**/__pycache__/*"
]

[tool.hatch.metadata]
allow-direct-references = true
